classDiagram

    class ApprovedTaxonomyResult {
        approved: bool = True
        categories: list[str] = list
        tags: list[str] = list
    }

    class BookScanCreate {
        title: str
    }

    class BookScanRead {
        title: str
        id: str
        imageIds: list[str] | None = None
    }

    class BookScanUpdate {
        title: str | None = None
    }

    class ClassificationGraphState {
        classification_record_id: str | None = None
        book_scan_id: str | None = None
        text_pages: list[PageScanRead] | None = None
        image_pages: list[PageScanRead] | None = None
        input_pages: list[ClassificationRecordInputPage] | None = None
        llm_candidate: dict[] | None = None
        thumbnail_path: str | None = None
        first_pass_validation: bool = False
        current_recipe_state: RecipeCreate | None = None
        taxonomy_user_approved: dict | None = None
    }

    class ClassificationRecordCreate {
        book_scan_id: str
    }

    class ClassificationRecordInputPage {
        original_id: str
        page_number: int
        ocr_path: str | None = None
        title: str | None = None
        segmentation_done: bool | None = False
        relevant_segment: SegmentationSegment | None = None
        page_type: PageType | None = None
    }

    class ClassificationRecordRead {
        id: str
        book_scan_id: str
        recipe_id: str | None = None
        title: str | None = None
        thumbnail_path: str | None = None
        status: RecordStatus = RecordStatus.QUEUED
        approved: bool = False
        text_pages: list[Page]
        image_pages: list[Page]
        validation_result: RecipeCreate | None = None
        created_at: datetime
        updated_at: datetime
        error_message: str | None = None
    }

    class ClassificationRecordUpdate {
        id: str
        recipe_id: str | None = None
        title: str | None = None
        thumbnail_path: str | None = None
        status: RecordStatus | None = None
        approved: bool | None = None
        text_pages: list[Page] | None = None
        image_pages: list[Page] | None = None
        validation_result: RecipeCreate | None = None
    }

    class GraphBroadCast {
        type: str
        id: str
        status: PageStatus | RecordStatus
    }

    class GroupApproval {
        phase: Literal['group'] = 'group'
        approved: bool = True
        new_group: list[Page] | None = None
    }

    class IngredientOut {
        name: str
        quantity: str | None = None
        unit: str | None = None
        preparation: str | None = None
    }

    class OCRResult {
        page_id: str
        full_text: str
        blocks: list[dict[str, Any]]
    }

    class Page {
        id: str
        page_number: int | None = None
    }

    class PageScanCreate {
        filename: str
        bookScanID: str
    }

    class PageScanRead {
        filename: str
        bookScanID: str
        id: str
        page_number: int
        scanDate: datetime
        ocr_path: str | None = None
        title: str | None = None
        page_segments: list[SegmentationSegment] | None = None
        segmentation_done: bool | None = False
        page_type: PageType | None = None
        status: PageStatus | None = PageStatus.QUEUED
    }

    class PageScanUpdate {
        id: str
        filename: str | None = None
        bookScanID: str | None = None
        page_number: int | None = None
        scanDate: datetime = None
        ocr_path: str | None = None
        title: str | None = None
        page_segments: list[SegmentationSegment] | None = None
        segmentation_done: bool | None = False
        status: PageStatus | None = None
        page_type: PageType | None = None
    }

    class RecipeApproval {
        phase: Literal['recipe'] = 'recipe'
        approved: bool = True
        recipe: RecipeCreate | None = None
    }

    class RecipeCreate {
        title: str
        description: str | None = None
        prep_time: int | None = None
        cook_time: int | None = None
        servings: int | None = None
        image_url: str | None = None
        source: str | None = None
        source_url: str | None = None
        categories: list[str] | None = list
        tags: list[str] | None = list
        difficulty: str | None = None
        notes: str | None = None
        rating: int | None = None
        nutritional_info: str | None = None
        ingredients: list[RecipeIngredientCreate] | None = list
        instructions: list[RecipeInstructionCreate] | None = list
        nutrition: RecipeNutritionBase | None = None
    }

    class RecipeLLMOut {
        title: str
        description: str | None = None
        ingredients: list[IngredientOut] = list
        instructions: list[str] = list
        prep_time: str | None = None
        cook_time: str | None = None
        servings: str | None = None
        notes: str | None = None
    }

    class SegmentationApproval {
        approved: bool = True
        segmentation: SegmentationResult | None = None
    }

    class SegmentationGraphState {
        page_record_id: str
        ocr_result: OCRResult
        segmentation: SegmentationResult | None = None
    }

    class SegmentationResult {
        segmentation_done: bool = False
        page_segments: list[SegmentationSegment] | None = None
    }

    class SegmentationSegment {
        id: int
        title: str
        bounding_boxes: list[list[dict[str, int]]]
        associated_ocr_blocks: list[int]
    }

    class TaxonomyApproval {
        phase: Literal['taxonomy'] = 'taxonomy'
        approved: bool = True
        categories: list[str] | None = None
        tags: list[str] | None = None
        source: str | None = None
    }

    ClassificationGraphState ..> ClassificationRecordInputPage
    ClassificationGraphState ..> PageScanRead
    ClassificationGraphState ..> RecipeCreate
    ClassificationGraphState ..> dict
    ClassificationRecordInputPage ..> PageType
    ClassificationRecordInputPage ..> SegmentationSegment
    ClassificationRecordRead ..> Page
    ClassificationRecordRead ..> RecipeCreate
    ClassificationRecordRead ..> RecordStatus
    ClassificationRecordRead ..> datetime
    ClassificationRecordUpdate ..> Page
    ClassificationRecordUpdate ..> RecipeCreate
    ClassificationRecordUpdate ..> RecordStatus
    GraphBroadCast ..> PageStatus
    GraphBroadCast ..> RecordStatus
    GroupApproval ..> Page
    OCRResult ..> Any
    PageScanRead ..> PageStatus
    PageScanRead ..> PageType
    PageScanRead ..> SegmentationSegment
    PageScanRead ..> datetime
    PageScanUpdate ..> PageStatus
    PageScanUpdate ..> PageType
    PageScanUpdate ..> SegmentationSegment
    PageScanUpdate ..> datetime
    RecipeApproval ..> RecipeCreate
    RecipeCreate ..> RecipeIngredientCreate
    RecipeCreate ..> RecipeInstructionCreate
    RecipeCreate ..> RecipeNutritionBase
    RecipeLLMOut ..> IngredientOut
    SegmentationApproval ..> SegmentationResult
    SegmentationGraphState ..> OCRResult
    SegmentationGraphState ..> SegmentationResult
    SegmentationResult ..> SegmentationSegment

